@@ -1,3 +1,8 @@
+2003-01-22  Paul D. Smith  <psmith@gnu.org>
+
+	* scripts/functions/call: Test recursive argument masking (bug
+	#1744).
+
 2002-10-25  Paul D. Smith  <psmith@gnu.org>
 
 	* scripts/functions/eval: Test using $(eval ...) inside
